--- a/landing.html
+++ b/landing.html
@@ -109,8 +109,8 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="btn btn-success mx-1 mt-1 landing-btn">ចូលគណនី</button>
-            <button class="btn btn-success mx-1 mt-1 landing-btn">បង្កើតគណនី</button>
+            <a href="signin.html" class="btn btn-success mx-1 mt-1 landing-btn">ចូលគណនី</a>
+            <a href="register.html" class="btn btn-success mx-1 mt-1 landing-btn">បង្កើតគណនី</a>
           </div>
         </div>
       </nav>
