--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   </ul>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">សកម្មភាពសង្គម</a>
+                  <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
                 </li>
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="#">ផលិតផលកែច្នៃ</a>
