--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="container"></div>
     </header>
     <main>
-        <section class="about-area">
+        <section class="about-area py-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
@@ -40,7 +40,8 @@
                         <!-- nazaby  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
-                                <img src="assets/chhorng/img/Nazaby.JPG" class="card-img" style="height: 100%;" alt="">
+                                <img src="assets/chhorng/img/nazaby-ai.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
                                 <div class="card-body">
                                     <div class="card-title">
                                         <h4 class="fs-5">Nazaby</h4>
@@ -67,7 +68,8 @@
                         <!-- Senkropum  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
-                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <img src="assets/chhorng/img/Kropun-ai.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
                                 <div class="card-body">
                                     <div class="card-title">
                                         <h4 class="fs-5">Senkropum</h4>
@@ -95,7 +97,8 @@
                         <!-- Me  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
-                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
                                 <div class="card-body">
                                     <div class="card-title">
                                         <h4 class="fs-5">Kimchhorng</h4>
@@ -126,7 +129,8 @@
                         <!-- Minea  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
-                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <img src="assets/chhorng/img/Minea-ai.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
                                 <div class="card-body">
                                     <div class="card-title">
                                         <h4 class="fs-5">Meng Minea</h4>
@@ -153,7 +157,8 @@
                         <!-- Makara  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
-                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <img src="assets/chhorng/img/Makara-ai.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
                                 <div class="card-body">
                                     <div class="card-title">
                                         <h4 class="fs-5">Makara</h4>
@@ -168,7 +173,35 @@
                                             <li><a class="nav-link" href="https://t.me/chummakara168"><img
                                                         src="assets/chhorng/img/telegram-black.png" class="img-icon"
                                                         alt=""></a></li>
-                                            <li><a class="nav-link" href="https://www.linkedin.com/in/chum-makara-8b0718382/"><img src="assets/chhorng/img/linkin.png"
+                                            <li><a class="nav-link"
+                                                    href="https://www.linkedin.com/in/chum-makara-8b0718382/"><img
+                                                        src="assets/chhorng/img/linkin.png" class="img-icon" alt=""></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Vuthy  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/vuthy-ai.jpg" class="card-img object-fit-cover"
+                                    style="height: 245px;" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Vuthy</h4>
+                                        <p class="text-light text-center">Morn Thmei</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link"
+                                                    href="https://www.facebook.com/chhorn.vuthy.146?mibextid=ZbWKwL"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href=""><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link" href=""><img src="assets/chhorng/img/linkin.png"
                                                         class="img-icon" alt=""></a></li>
                                         </ul>
                                     </div>
@@ -179,9 +212,86 @@
                 </div>
             </div>
         </section>
+        <section class="about-sec-col py-5">
+            <div class="container">
+                <div class="row justify-content-center mb-4">
+                    <div class="col-lg-6">
+                        <div class="card">
+                            <div class="card-header">
+                                ...
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">...</h5>
+                                <p class="card-text">...</p>
+                            </div>
+                            <div class="card-footer text-muted">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <img src="assets/chhorng/img/team-5.jpg" class="card-img object-fit-cover"
+                                style="height: 170px;" alt="">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-2">
+                        <div class="card">
+                            <div class="card-header">
+                                ...
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">...</h5>
+                                <p class="card-text">...</p>
+                            </div>
+                            <div class="card-footer text-muted">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div class="card">
+                            <div class="card-header">
+                                ...
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">...</h5>
+                                <p class="card-text">...</p>
+                            </div>
+                            <div class="card-footer text-muted">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="my-5">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 bg-dark position-relative" style="height: 163px;">
+                        <h1 class="text-light text-center pt-8">ABOUT US</h1>
+                        <div class=" bg-primary">
+                            <div class="triangle "></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 bg-success">
+                        <div class="card row justify-content-center align-items-center bg-transparent border-0"
+                            style="height: 100%;">
+                            <p class="text-center text-light">We create a Website About recycle Lorem ipsum dolor sit
+                                amet consectetur, adipisicing elit. Veritatis inventore quasi corporis beatae soluta
+                                molestias distinctio ea accusamus optio ad doloremque ipsa quae vero, totam iure dicta
+                                magni est, laborum consequatur alias tenetur. Ea deserunt sunt nisi libero optio at?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-        <div class="container"></div>
     </footer>
 
 </body>
