--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -14,48 +14,102 @@
 
 <body class="forgetpwd-page">
     <main>
-        <section class="forgetpwd-area">
-            <div class="container">
-                <div class="row justify-content-center align-items-center min-vh-100">
-                    <div class="col-12 col-md-10 col-lg-10">
-                        <div class="bg-light py-5 px-3 px-md-5 rounded-4 shadow-sm">
-                            <div class="row justify-content-center align-items-center">
-                                <!-- Left Image -->
-                                <div class="col-12 col-md-5 mb-4 mb-md-0 text-center d-none d-md-block">
-                                    <img src="assets/chhorng/img/Forgot password.svg" alt="Forgot Password"
-                                        class="img-fluid">
-                                </div>
-                                <!-- Form Right -->
-                                <div class="col-11 col-md-6 col-lg-5">
-                                    <form novalidate>
-                                        <h1 class="display-6 fw-bolder mb-3">Forget Password</h1>
-                                        <p class="text-secondary mb-4" style="font-size: 16px;">
-                                            Enter the email associated with your account and we'll send instructions to reset your password.
-                                        </p>
-                                        <!-- Email Input -->
-                                        <div class="mb-4">
-                                            <label class="form-label text-secondary" for="email">Your Email</label>
-                                            <input type="email" id="email" placeholder="Email" required
-                                                class="form-control border-0 rounded-pill bg-success-subtle text-success py-2">
-                                        </div>
-                                        <!-- Send Button -->
-                                        <div class="col-10 m-auto d-grid mb-3">
-                                            <a href="pin.html" class="btn btn-success rounded-pill">Send</a>
-                                        </div>
-                                        <!-- Alternative Way -->
-                                        <div class="text-center">
-                                            <a href="#" class="text-success" style="font-size: 15px;">Try another way</a>
-                                        </div>
-                                    </form>
+        <div class="background">
+
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <section class="forgetpwd-area">
+                <div class="container">
+                    <div class="row justify-content-center align-items-center min-vh-100">
+                        <div class="col-12 col-md-10 col-lg-10">
+                            <div class="bg-light py-5 px-3 px-md-5 rounded-4 shadow-sm">
+                                <div class="row justify-content-center align-items-center">
+                                    <!-- Left Image -->
+                                    <div class="col-12 col-md-5 mb-4 mb-md-0 text-center d-none d-md-block">
+                                        <img src="assets/chhorng/img/Forgot password.svg" alt="Forgot Password"
+                                            class="img-fluid">
+                                    </div>
+                                    <!-- Form Right -->
+                                    <div class="col-11 col-md-6 col-lg-5">
+                                        <form novalidate>
+                                            <h1 class="display-6 fw-bolder mb-3">Forget Password</h1>
+                                            <p class="text-secondary mb-4" style="font-size: 16px;">
+                                                Enter the email associated with your account and we'll send instructions
+                                                to reset your password.
+                                            </p>
+                                            <!-- Email Input -->
+                                            <div class="mb-4">
+                                                <label class="form-label text-secondary" for="email">Your Email</label>
+                                                <input type="email" id="email" placeholder="Email" required
+                                                    class="form-control border-0 rounded-pill bg-success-subtle text-success py-2">
+                                            </div>
+                                            <!-- Send Button -->
+                                            <div class="col-10 m-auto d-grid mb-3">
+                                                <a href="pin.html" class="btn btn-success rounded-pill">Send</a>
+                                            </div>
+                                            <!-- Alternative Way -->
+                                            <div class="text-center">
+                                                <a href="#" class="text-success" style="font-size: 15px;">Try another
+                                                    way</a>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
-
     <!-- Bootstrap JS -->
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
