--- a/newpassword.html
+++ b/newpassword.html
@@ -37,7 +37,7 @@
                                                 Create New Password <span class="text-danger">*</span>
                                             </label>
                                             <input type="password" id="newPassword" placeholder="Password" required
-                                                class="form-control border-0 border-bottom rounded-0">
+                                                class="form-control rounded-pill rounded-0 border-success">
                                         </div>
                                         <!-- Confirm Password -->
                                         <div class="mb-4">
@@ -45,7 +45,7 @@
                                                 Confirm Your New Password <span class="text-danger">*</span>
                                             </label>
                                             <input type="password" id="confirmPassword" placeholder="Password" required
-                                                class="form-control border-0 border-bottom rounded-0 ">
+                                                class="form-control rounded-pill rounded-0 border-success">
                                         </div>
                                         <!-- Submit Button -->
                                         <div class="text-center mt-4">
