--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="navbar-brand" href="#">
             <img
               src="assets/image/green_leaves_round_logo.png"
-              class="ms-0 ms-md-5 logo"
+              class="logo"
               style="width: 40px"
               alt="logo"
             />
@@ -72,7 +72,7 @@
                   <a
                     class="nav-link active fs-5 nav-hover"
                     aria-current="page"
-                    href="#"
+                    href="index.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -291,7 +291,6 @@
                     <span class="ms-2">Dark</span>
                   </a>
                 </li>
-                
               </ul>
             </div>
           </div>
@@ -299,12 +298,20 @@
       </nav>
     </header>
     <main>
-      <section class="hero-banner">
-        <img
+      <section class="hero-banner mt-8 py-5">
+        <!-- <img
           src="assets/image/photo_2025-08-25_15-54-12.jpg"
           alt=""
           class="banner-img"
-        />
+        /> -->
+        <div class="container d-flex align-items-center">
+          <div class="row">
+            <div class="col-6">
+              <h6 class="text-success fs-6 mt-5">សូមចូលរួមថែរក្សាបរិស្ថាន</h6>
+              <h2>បរិស្ថានស្អាត់​ ការពារការបំពុល សុខភាពល្អ</h2>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <div class="container">
