--- a/ng.html
+++ b/ng.html
@@ -94,10 +94,10 @@
         style="height: 70px"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
-              class="ms-0 ms-md-5 logo"
+              class="logo"
               style="width: 40px"
               alt="logo"
             />
@@ -362,6 +362,7 @@
                     <span class="ms-2">Dark</span>
                   </a>
                 </li>
+                
               </ul>
             </div>
           </div>
