update responsive payment

--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
   <main>
     <div class="container my-5">
       <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-12 col-md-10 col-lg-8 mx-auto">
           <h2 class="mb-4 text-center fs-kp fs-1">សូមស្វាគមន៏មកកាន់កន្លែងត្រួតពិនិត្យការបញ្ជាទិញ</h2>
 
           <div class="table-responsive">
@@ -93,7 +93,7 @@
       </div>
     </div>
     <!-- toasts -->
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div class="toast-container position-fixed p-3 toast-position">
       <div id="mainToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
           <strong class="me-auto fs-kp">សារព័ត៌មាន</strong>
@@ -121,7 +121,7 @@
                     <p id="modal-product-name"></p>
                   </div>
                 </div>
-                <div class="col-sm-12 col-md-6 text-center">
+                <div class="col-sm-12 col-md-6 ">
                   <div class="card text-center border-0">
                     <label class="form-label fw-bold">ចំនួនផលិតផល</label>
                     <input type="number" class="form-control text-center" id="modal-product-quantity" min="1" max="20">
