--- a/payment.html
+++ b/payment.html
@@ -112,7 +112,7 @@
   <div class="modal fade" id="qrModalaba" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header bg-success">
           <h5 class="modal-title"><i class="fas fa-qrcode me-2"></i>ABA QR Payment</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -122,7 +122,7 @@
           <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ABA Bank</p>
         </div>
         <div class="modal-footer justify-content-center">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger ms-auto" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
   <div class="modal fade" id="qrModalac" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header bg-success">
           <h5 class="modal-title"><i class="fas fa-qrcode me-2"></i>ACLEDA QR Payment</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -141,7 +141,7 @@
           <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ACLEDA Bank</p>
         </div>
         <div class="modal-footer justify-content-center">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger ms-auto" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
