--- a/donate.html
+++ b/donate.html
@@ -72,7 +72,7 @@
         <!-- Card 2 -->
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="https://scontent.fpnh5-3.fna.fbcdn.net/v/t39.30808-6/481465969_1207412938050782_3520185278417103767_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeGeqo3SUCQWHnlcopoKLcfYcsrl05AEtiRyyuXTkAS2JGukKw95m90D-H8wfANh7w2Nl45TphKxgcfWCWncW5zu&_nc_ohc=T69xYcWrMicQ7kNvwEJ2gNT&_nc_oc=AdlyDU5pWrsaGk8ab1WpkjYV_hIX9zps2adybvUoXSblOAncB9AFCelp150v-YWiLxI&_nc_zt=23&_nc_ht=scontent.fpnh5-3.fna&_nc_gid=-m_deSVkqejNTuedGiisgg&oh=00_AfUERKb8NcEbeQ12dyKnXqTr5B-Tu-M4trWTRCmOA4Rilw&oe=68BB3BEF" alt="Present for You" class="card-img">
+            <img src="assets/Kropum/img/beco____-.jpg" alt="Present for You" class="card-img">
             <div class="card-overlay">
               <a href="be_eco.html" class="text-decoration-none"><span class="card-overlay-icon" >&#128279;</span></a>
             </div>
@@ -86,7 +86,7 @@
         <!-- Card 3 -->
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="https://scontent.fpnh5-1.fna.fbcdn.net/v/t39.30808-6/490014297_994283346171255_3208003772289214400_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeGsLa5i-RnZcAU4Qdw6JBr9Ug-NcV0yGJJSD41xXTIYkkwPb8KQYZifH8eiaRuv9BWmvXwxieJG02FWuH0WQYKs&_nc_ohc=iMLjNxfXLNEQ7kNvwEMvxRw&_nc_oc=Adl0RYNGi2U4Qn-A8V1zE1eoy49NfEJxzIo6VEtKh_wgwNE_yosb_FBaqh9axc0lm5U&_nc_zt=23&_nc_ht=scontent.fpnh5-1.fna&_nc_gid=UvaVTBCWtraL40VtHObmiA&oh=00_AfahYHV-v-1IWI3BNKAMEU__DcJqPfxPS1ZEANPqQz_Khg&oe=68BF262B" alt="Ocean Turtle" class="card-img">
+            <img src="assets/Kropum/img/snurkhorav.jpg" alt="Ocean Turtle" class="card-img">
             <div class="card-overlay">
               <span class="card-overlay-icon">&#128279;</span>
             </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="https://sbm.news/api/files/images/sbm-8vYvrewfy7qtUB7KGV2FF.jpg" alt="Ocean Turtle" class="card-img">
+            <img src="assets/Kropum/img/jasnaktmeyknhom.jpg" alt="Ocean Turtle" class="card-img">
             <div class="card-overlay">
               <span class="card-overlay-icon">&#128279;</span>
             </div>
@@ -171,6 +171,18 @@
       </div>
     </div>
   </section>
+      <nav aria-label="Course pagination" class="mb-5">
+      <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
+        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+      </ul>
+    </nav>
+
 
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
