--- a/ng.html
+++ b/ng.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eco Donation & Events Cambodia</title>
+  
   <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
@@ -79,33 +80,39 @@
   <!-- Hero Carousel -->
   <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active" style="background-image: url('https://images.pexels.com/photos/31670489/pexels-photo-31670489.jpeg');">
+      <div class="carousel-item active"
+        style="background-image: url('https://images.pexels.com/photos/31670489/pexels-photo-31670489.jpeg');">
         <div class="d-flex h-100 justify-content-center align-items-center">
           <div class="hero-content">
             <h1>Zero-Waste</h1>
             <p>ប្រើប្រាស់ឡើងវិញ, កាត់បន្ថយ, និងជួយសហគមន៍</p>
-            <a href="event.html" class="btn btn-success">ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i></a>
-            <a href="donate.html" class="btn btn-light">ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="donate.html" class="btn btn-success">កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="used.html" class="btn btn-light">បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច <i
+                class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('https://images.pexels.com/photos/1131458/pexels-photo-1131458.jpeg');">
+      <div class="carousel-item"
+        style="background-image: url('https://images.pexels.com/photos/1131458/pexels-photo-1131458.jpeg');">
         <div class="d-flex h-100 justify-content-center align-items-center">
           <div class="hero-content">
             <h1>ចូលរួមក្នុងការកាត់បន្ថយកាកសំណល់</h1>
             <p>បរិច្ចាគ, កែច្នៃ និងធ្វើឱ្យកម្ពុជាស្រស់ស្អាត</p>
-            <a href="event.html" class="btn btn-success">ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i></a>
-            <a href="donate.html" class="btn btn-light">ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="donate.html" class="btn btn-success">កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="used.html" class="btn btn-light">បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច <i
+                class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('https://images.pexels.com/photos/8180523/pexels-photo-8180523.jpeg');">
+      <div class="carousel-item"
+        style="background-image: url('https://images.pexels.com/photos/8180523/pexels-photo-8180523.jpeg');">
         <div class="d-flex h-100 justify-content-center align-items-center">
           <div class="hero-content">
             <h1>កែច្នៃប្លាស្ទិក និងវត្ថុប្រើប្រាស់ឡើងវិញ</h1>
             <p>អប់រំ និងចូលរួមក្នុងគម្រោងការពារបរិស្ថាន</p>
-            <a href="event.html" class="btn btn-success">ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i></a>
-            <a href="donate.html" class="btn btn-light">ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="donate.html" class="btn btn-success">កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="used.html" class="btn btn-light">បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច <i
+                class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -119,48 +126,42 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <section>
+    <div class="container text-center my-5">
+      <h2 class="mb-4">របៀបដំណើរការ</h2>
+      <div class="row">
+        <div class="col-4">
+          
+          <i class="fa-solid fa-box-open fa-2x text-success mb-2"></i>
+          <h5>1. ប្រមូល</h5>
+          <p>ជ្រើសរើសវត្ថុដែលអ្នកមិនចាំបាច់ប្រើទៀត ប៉ុន្តែវានៅតែមានប្រយោជន៍</p>
 
-  <!-- Events Section -->
-  <section id="events" class="container my-5">
-    <h2>ព្រឹត្តិការណ៍កំពុងមកដល់</h2>
-    <div class="row g-4">
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card">
-          <img src="assets/Kropum/img/Event4.jpg" class="card-img-top" alt="event1">
-          <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event1.html" class="text-decoration-none text-success">Forest EcoPreneurs</a></h5>
-            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥​ | ភ្នំពេញ</p>
-          </div>
+        
         </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card">
-          <img src="assets/Kropum/img/Event6.jpg" class="card-img-top" alt="event2">
-          <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event2.html" class="text-decoration-none text-success">Workshop Art,Culture</a></h5>
-            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ២២​ ធ្នូរ​ ២០២៥​ | ភ្នំពេញ</p>
-          </div>
+        <div class="col-4">
+          <i class="fa-solid fa-hand-holding-heart fa-2x text-success mb-2"></i>
+          <h5>2. បរិច្ចាគ</h5>
+          <p>នាំវត្ថុទាំងនោះទៅកន្លែងដែលត្រូវការ</p>
         </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card">
-          <img src="assets/Kropum/img/event7.jpg" class="card-img-top" alt="event3">
-          <div class="card-body">
-            <h5 class="card-title fw-bold"><a href="event3.html" class="text-decoration-none text-success">Plastic Waste</a></h5>
-            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ២៥ ធ្នូរ​ ២០២៥​ | Japan</p>
-          </div>
+        <div class="col-4">
+          <i class="fa-solid fa-smile fa-2x text-success mb-2"></i>
+          <h5>3. បង្កើតឥទ្ធិពល</h5>
+          <p>ការបរិច្ចាគរបស់អ្នកអាចជួយអ្នកដទៃ និងកាត់បន្ថយកាកសំណល់</p>
         </div>
       </div>
     </div>
   </section>
 
+
+
   <!-- Donations Section -->
   <section id="donations" class="container my-5">
-    <h2>កន្លែងទទួលបរិច្ចាគ និងកែច្នៃ</h2>
+    <h2><i class="fas fa-map-marker-alt me-2 mb-3"></i>កន្លែងទទួលបរិច្ចាគ និងកែច្នៃ</h2>
     <div class="row g-4">
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card">
-          <img src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg" class="card-img" alt="Pizza 4P’s" style="height:250px; object-fit:cover;">
+          <img src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg" class="card-img"
+            alt="Pizza 4P’s" style="height:250px; object-fit:cover;">
           <div class="card-body">
             <h3 class="card-title"><a href="pizza4ps.html" class="text-decoration-none text-success">Pizza 4P’s</a></h3>
             <p class="card-text">Pizza 4P’s ចូលរួមក្នុងគម្រោង ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...</p>
@@ -169,7 +170,8 @@
       </div>
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card">
-          <img src="https://scontent.fpnh5-3.fna.fbcdn.net/v/t39.30808-6/481465969_1207412938050782_3520185278417103767_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeGeqo3SUCQWHnlcopoKLcfYcsrl05AEtiRyyuXTkAS2JGukKw95m90D-H8wfANh7w2Nl45TphKxgcfWCWncW5zu&_nc_ohc=T69xYcWrMicQ7kNvwEJ2gNT&_nc_oc=AdlyDU5pWrsaGk8ab1WpkjYV_hIX9zps2adybvUoXSblOAncB9AFCelp150v-YWiLxI&_nc_zt=23&_nc_ht=scontent.fpnh5-3.fna&_nc_gid=-m_deSVkqejNTuedGiisgg&oh=00_AfUERKb8NcEbeQ12dyKnXqTr5B-Tu-M4trWTRCmOA4Rilw&oe=68BB3BEF" class="card-img" alt="Be Eco" style="height:250px; object-fit:cover;">
+          <img src="assets/Kropum/img/Beco---.png" class="card-img" alt="Be Eco"
+            style="height:250px; object-fit:cover;">
           <div class="card-body">
             <h3 class="card-title"><a href="be_eco.html" class="text-decoration-none text-success">Be Eco</a></h3>
             <p class="card-text">Be Eco ចូលរួមក្នុងគម្រោង ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...</p>
@@ -188,20 +190,56 @@
         </div>
       </div>
     </div>
-    <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
-    <div class="d-flex partners flex-wrap mt-3">
-      <img src="https://i.pinimg.com/736x/08/b4/9e/08b49e6a40f5396c9959d603c230c063.jpg" alt="Pizza 4P’s">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8sEJTjE7r7CmU-GGnppbbB6_lgYajvWXoeQ&s" alt="GoGreen Cambodia">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFfIlcbSJ7ecvRKlaeoIaQIGeTI9gsf0L9Mw&s" alt="">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR-KnEruj7qCI5ZOjFXKlT6M2_9HnHlR8LJg&s" alt="">
+  </section>
+  <!-- Events Section -->
+  <section id="events" class="container my-5">
+    <div class="container my-5">
+      <h2 class="mb-4">ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច</h2>
+      <div class="row text-center">
+        <div class="col-4">
+          <div class="card p-3 shadow-sm ">
+            <i class="fa-solid fa-tshirt fa-2x text-success mb-3" style="margin-left: 165px;"></i>
+            <h5 class="card-title">សម្លៀកបំពាក់</h5>
+            <p class="card-text">Donate your clean, used clothes to people in need.</p>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card p-3 shadow-sm">
+            <i class="fa-solid fa-couch fa-2x text-success mb-3" style="margin-left: 165px;"></i>
+            <h5 class="card-title">គ្រឿងសង្ហារិម</h5>
+            <p class="card-text">Give old furniture a new life by donating it to where needed</p>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card p-3 shadow-sm">
+            <i class="fa-solid fa-laptop fa-2x text-success mb-3" style="margin-left: 165px;"></i>
+            <h5 class="card-title">ឧបករណ៍អេឡិចត្រូនិច</h5>
+            <p class="card-text">Recycle and reuse gadgets instead of throwing them away.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  <section>
+    <div class="container my-5">
+      <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
+      <div class="d-flex partners flex-wrap mt-3">
+        <img src="https://i.pinimg.com/736x/08/b4/9e/08b49e6a40f5396c9959d603c230c063.jpg" alt="Pizza 4P’s">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8sEJTjE7r7CmU-GGnppbbB6_lgYajvWXoeQ&s"
+          alt="GoGreen Cambodia">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFfIlcbSJ7ecvRKlaeoIaQIGeTI9gsf0L9Mw&s" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR-KnEruj7qCI5ZOjFXKlT6M2_9HnHlR8LJg&s" alt="">
+      </div>
 
+    </div>
+  </section>
+  
   <!-- Call to Action -->
   <section class="cta container">
-    <h2 class="text-light">ចូលរួមជាមួយយើងថ្ងៃនេះ!</h2>
-    <p class="text-light">ការបរិច្ចាគតូចៗរបស់អ្នកអាចបង្កើតការផ្លាស់ប្តូរធំសម្រាប់បរិស្ថាន។</p>
-    <a href="reuse.html" class="btn btn-light">ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច <i class="fa-solid fa-arrow-right"></i></a>
+    <div class="">
+      <h2 class="text-light">ចូលរួមជាមួយយើងថ្ងៃនេះ!</h2>
+      <p class="text-light">ការបរិច្ចាគតូចៗរបស់អ្នកអាចបង្កើតការផ្លាស់ប្តូរធំសម្រាប់បរិស្ថាន។</p>
+    </div>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
