--- a/pin.html
+++ b/pin.html
@@ -54,18 +54,18 @@
                                     </p>
                                     <form>
                                         <div class="d-flex justify-content-center gap-3 mb-4 flex-wrap">
-                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input"
+                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input text-success"
                                                 oninput="this.value=this.value.slice(0,1)">
-                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input"
+                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input text-success"
                                                 oninput="this.value=this.value.slice(0,1)">
-                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input"
+                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input text-success"
                                                 oninput="this.value=this.value.slice(0,1)">
-                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input"
+                                            <input type="number" min="0" max="9" maxlength="1" class="pin-input text-success"
                                                 oninput="this.value=this.value.slice(0,1)">
                                         </div>
                                     </form>
                                     <div class="text-center mt-3">
-                                        <a href="#" class="text-success d-block mb-4">Resend Code</a>
+                                        <a href="#" class="text-success d-block mb-4 ">Resend Code</a>
                                         <a href="newpassword.html" class="btn btn-success rounded-pill px-5">Verify</a>
                                     </div>
                                 </div>
