--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </nav>
     </header>
     <main>
-      <section class="hero-banner mt-8 mt-md-0 pb-5">
+      <section class="hero-banner mt-8 mt-md-0">
         <div class="container">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
@@ -310,6 +310,9 @@
                   >បរិស្ថាន</span
                 >
               </h2>
+              <a href="" class="btn bg-success text-white mt-5">
+                ចូលរួមជាមួយយើង
+              </a>
             </div>
             <div class="col-md-6">
               <div class="banner-img position-relative">
@@ -318,19 +321,29 @@
                   alt=""
                   class="banner-img"
                 />
-                <img
+                <!-- <img
                   src="assets/image/rubbish.png"
                   alt=""
                   class="img-fluid position-absolute banner-1"
                 />
+                <img
+                  src="assets/image/rubbish.png"
+                  alt=""
+                  class="img-fluid position-absolute banner-2"
+                />
+                <img
+                  src="assets/image/rubbish.png"
+                  alt=""
+                  class="img-fluid position-absolute banner-3"
+                /> -->
               </div>
             </div>
           </div>
         </div>
       </section>
       <section>
-        <div class="container">
-          <h1>Benefit Of Recycle</h1>
+        <div class="container mt-3">
+          <h1>អត្ថប្រយោជន៍នៃការកែច្នៃ</h1>
         </div>
       </section>
     </main>
