--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/d9ad53b8e3.js"
       crossorigin="anonymous"
@@ -310,12 +311,19 @@
                   >បរិស្ថាន</span
                 >
               </h2>
-              <a href="" class="btn bg-success text-white mt-5">
+              <a href="" class="btn bg-success text-white mt-5 hvr-wobble-top" data-aos="fade-right"
+                data-aos-duration="1000"
+                data-aos-delay="200">
                 ចូលរួមជាមួយយើង
               </a>
             </div>
             <div class="col-md-6">
-              <div class="banner-img position-relative">
+              <div
+                class="banner-img position-relative"
+                data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="200"
+              >
                 <img
                   src="assets/image/banner-1.png"
                   alt=""
@@ -342,13 +350,14 @@
         </div>
       </section>
       <section>
-        <div class="container mt-3">
-          <h1>អត្ថប្រយោជន៍នៃការកែច្នៃ</h1>
+        <div class="container mt-3 scale-up-ver-center">
+          <h2 >អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
         </div>
       </section>
     </main>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/function.js"></script>
+
   </body>
 </html>
