--- a/index.html
+++ b/index.html
@@ -311,9 +311,13 @@
                   >បរិស្ថាន</span
                 >
               </h2>
-              <a href="" class="btn bg-success text-white mt-5 hvr-wobble-top" data-aos="fade-right"
+              <a
+                href=""
+                class="btn bg-success text-white mt-5 hvr-wobble-top"
+                data-aos="fade-right"
                 data-aos-duration="1000"
-                data-aos-delay="200">
+                data-aos-delay="200"
+              >
                 ចូលរួមជាមួយយើង
               </a>
             </div>
@@ -349,15 +353,63 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="container mt-3 scale-up-ver-center">
-          <h2 >អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
+      <section class="benefit">
+        <div class="text-center scale-up-ver-center py-4">
+          <h2>អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
+        </div>
+        <div class="content">
+          <div class="content-body bg-body-secondary">
+            <div class="text container py-3">
+              <div class="row align-items-center">
+                <div class="col-8">
+                <h3>១. ការការពារបរិស្ថាន</h3>
+                <p>
+                  -
+                  ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម
+                  និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
+                </p>
+                <p>
+                  - បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
+                  ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
+                </p>
+                <p>
+                  - ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
+                  ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
+                </p>
+              </div>
+              <div class="col-4">
+                <img src="assets/image/Environmental Protection.jpg" alt="" class="img-fluid" data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="200" height="300px">
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="content-body bg-white">
+            <div class="text container py-3">
+              <div class="row align-items-center">
+                <div class="col-8">
+                <h3>២. ការសន្សំថាមពល</h3>
+                <p>
+                  - ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម រហូតដល់ការផលិត និងដឹកជញ្ជូន។
+                </p>
+                <p>
+                  - ការកែច្នៃប្រើថាមពលតិចជាង ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
+                </p>
+              </div>
+              <div class="col-4">
+                <img src="assets/image/energy save.jpg" alt="" class="img-fluid" data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="200" style="height: 300px;">
+              </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/function.js"></script>
-
   </body>
 </html>
